syntax = "proto3";
package Common;
option csharp_namespace = "GamePackets";

enum ErrorCode {
  OK = 0;
  UNAUTHORIZED = 1;
  INVALID_ARGUMENT = 2;
  RATE_LIMITED = 3;
  SERVER_ERROR = 4;
}

message ErrorInfo {
  ErrorCode code = 1;   // OK 이외는 실패
  string message = 2;   // 선택: 사용자/로그 메시지
}