syntax = "proto3";
package Wire;
option csharp_namespace = "GamePackets";

import "common.proto";
import "auth.proto";
import "chat.proto";

message Envelope {
  uint64 reqId = 1;   // 요청-응답 매칭용(클라가 채워 보냄)
  uint64 ts    = 2;   // 선택: 클라 송신 시각(ms)
  uint32 ver   = 3;   // 선택: 프로토콜 대버전

  // 서버→클라 응답 공통 결과(요청일 땐 비움/무시)
  Common.ErrorInfo result = 10;

  oneof body {
    // auth
    Auth.LoginReq login_req = 100;
    Auth.LoginRes login_res = 101;

    Auth.HandshakeReq  hs_req      = 110;
    Auth.HandshakeRes  hs_res      = 111;

    // chat (예: 서버 푸시 이벤트)
    Chat.ChatMsg chat_evt = 200;
  }
}